<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_cmc">About %s</string>
    <string name="agree_new_terms_and_conditions_and_pp">Tap here to agree to the new Terms and Conditions and Privacy Policy</string>
    <string name="agree_text">Agree</string>
    <string name="app_info">App Info</string>
    <string name="app_name">Call &amp; text on other devices</string>
    <string name="app_name_no_did">Call &amp; text on other devices</string>
    <string name="app_name_quick_panel_title">@string/app_name</string>
    <string name="app_name_short">Call &amp; text on other devices</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>
    <string name="call">Calls</string>
    <string name="calls_and_messages">Calls and messages</string>
    <string name="calls_only">Calls only</string>
    <string name="cb_msg_header">CB messages</string>
    <string name="change_main_device_button_switch">Switch</string>
    <string name="change_main_device_message">Switching to this phone will turn off Call &amp; text on other devices on %s.</string>
    <string name="change_main_device_title">Switch to this phone?</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="cmas_amber_alert">Amber Alerts</string>
    <string name="cmas_amber_alerts">Amber Alerts</string>
    <string name="cmas_cmas_test_message">Receive Test Alerts</string>
    <string name="cmas_emergency_alerts">Emergency Alerts</string>
    <string name="cmas_extreme_alert">Extreme Alerts</string>
    <string name="cmas_extreme_alerts">Extreme Alerts</string>
    <string name="cmas_presidential_alert">Presidential Alert</string>
    <string name="cmas_presidential_alerts">Presidential Alerts</string>
    <string name="cmas_severe_alert">Severe Alerts</string>
    <string name="cmas_severe_alerts">Severe Alerts</string>
    <string name="cmc_server_address_title">CMC server address</string>
    <string name="cmc_subtitle_new">"Use this phone's number to make and receive calls and texts on your other Samsung devices."</string>
    <string name="cmc_subtitle_new_sd">Make and receive calls and texts on this tablet.</string>
    <string name="cmc_test_text">CMC test</string>
    <string name="comma_for_date_format">,</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_your_watch_try_again">Connect your watch to your phone and try again.</string>
    <string name="connected_services">Connected services</string>
    <string name="contact_us">Contact us</string>
    <string name="continue_text">Continue</string>
    <string name="copy">Copy</string>
    <string name="data_setting_change_notification">Change to mobile data settings</string>
    <string name="default_apps_dialog_body_msg">To use %s, you need to change your default messaging app to Samsung Messages.</string>
    <string name="default_apps_dialog_body_phn">To use %s, you need to change your default calling app to Samsung Phone.</string>
    <string name="default_apps_dialog_body_phn_and_msg">To use %s, you need to change your default calling app to Samsung Phone and your default messaging app to Samsung Messages.</string>
    <string name="default_apps_dialog_button_change">Change</string>
    <string name="default_apps_dialog_header">Change defaults to Samsung apps?</string>
    <string name="default_apps_dialog_header_msgs">Change default to Samsung Messages?</string>
    <string name="default_apps_dialog_header_phn">Change default to Samsung Phone?</string>
    <string name="default_apps_toast_msg">"The new default messaging app doesn't support %s, so connected devices won't be able to send messages."</string>
    <string name="default_apps_toast_msg_pd_sd">Default messaging app changed. Your linked Galaxy devices may not be able to send messages anymore.</string>
    <string name="default_apps_toast_msg_sd_lte_tablet">"Default messaging app changed. This tablet may not be able to send messages through the phone it's linked to anymore."</string>
    <string name="default_apps_toast_phn">"The new default calling app doesn't support %s, so connected devices won't be able to make calls."</string>
    <string name="default_apps_toast_phn_and_msg">"%s turned off because it isn't supported by the default calling and messaging apps."</string>
    <string name="default_apps_toast_phn_pd_sd">Default calling app changed. Your linked Galaxy devices may not be able to make calls anymore.</string>
    <string name="default_apps_toast_phn_sd_lte_tablet">"Default calling app changed. This tablet may not be able to make calls through the phone it's linked to anymore."</string>
    <string name="delivery_report_label">Delivery report</string>
    <string name="developer_options">Developer Options</string>
    <string name="device_view_selected_device_count">%d selected</string>
    <string name="double_tap_to_deselect_all">Double tap to deselect all.</string>
    <string name="double_tap_to_select_all">Double tap to select all.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="empty" />
    <string name="enter_password">Enter password:</string>
    <string name="error_action_title">"Couldn't perform this action"</string>
    <string name="error_routine_action_airplane_mode_on">"This routine couldn't perform this action because Airplane mode was on."</string>
    <string name="error_routine_action_general_error">"This routine couldn't perform this action because another operation is preventing it."</string>
    <string name="error_routine_action_multi_user_mode">"This routine couldn't perform this action because you're using this tablet as a guest."</string>
    <string name="help">Help</string>
    <string name="help_page_string_1">To set up Call &amp; text on other devices on your tablet, watch, or speaker:</string>
    <string name="help_page_string_2">Make sure all the devices you want to call and text with are signed in to the same Samsung account.</string>
    <string name="help_page_string_3">To get all your contacts on all your devices, go to More options and select Move contacts to Samsung account. Then, sync them so they stay up to date on all your devices.</string>
    <string name="link_this_tablet_to_your_phone">Link this tablet to your phone</string>
    <string name="move_contacts_more_options_menu">Move contacts to Samsung account</string>
    <string name="open_source_licences">Open Source Licenses</string>
    <string name="personal_data">Personal data</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_in_about_page">Privacy Policy</string>
    <string name="remove">Remove device</string>
    <string name="routine_cmc_cancel">Cancel</string>
    <string name="routine_cmc_guide">Set up Call &amp; text on other devices first.</string>
    <string name="routine_open_cmc">Open Call &amp; text on other devices</string>
    <string name="select_sim_card">Select SIM card</string>
    <string name="sesl_appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="sync_your_contacts">Sync your contacts</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="update">Update</string>
    <string name="version_name">Version %s</string>
    <string name="your_application_is_up_to_date">The latest version is already installed.</string>
</resources>