<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:expanded="false" style="@style/Widget.Material.AppBarLayout">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsing_app_bar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" style="@style/Theme.Settings.CollapsingToolbar">
            <androidx.appcompat.widget.Toolbar android:layout_gravity="bottom" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/help_main_view" android:paddingBottom="@dimen/about_page_app_info_margin_start_end" android:focusable="true" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/about_page_app_info_margin_start_end" android:paddingEnd="@dimen/about_page_app_info_margin_start_end">
            <TextView android:textSize="@dimen/about_page_app_version_text_size" android:textColor="?android:textColorPrimary" android:id="@id/top_help_string" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_page_string_1" style="@style/RobotoRegular" />
            <TextView android:textSize="@dimen/about_page_app_version_text_size" android:textColor="?android:textColorPrimary" android:id="@id/help_text" android:padding="5.0dip" android:paddingBottom="@dimen/two_line_list_top_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RobotoRegular" />
            <TextView android:textSize="@dimen/about_page_app_version_text_size" android:textColor="?android:textColorPrimary" android:id="@id/help_msg_pd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_page_string_2" style="@style/RobotoRegular" />
            <TextView android:textSize="@dimen/pp_header_title_text_size" android:textColor="@color/bold_text_color" android:id="@id/help_msg_bottom_header" android:paddingTop="@dimen/about_page_app_info_margin_top" android:paddingBottom="@dimen/about_page_app_version_margin_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sync_your_contacts" style="@style/RobotoMedium" />
            <TextView android:textSize="@dimen/about_page_app_version_text_size" android:textColor="?android:textColorPrimary" android:id="@id/help_msg_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_page_string_3" style="@style/RobotoRegular" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>