<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="fill_parent" app:expanded="false" style="@style/Widget.Material.AppBarLayout">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsing_app_bar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" style="@style/Theme.Settings.CollapsingToolbar">
            <androidx.appcompat.widget.Toolbar android:layout_gravity="bottom" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_behavior="@string/sesl_appbar_scrolling_view_behavior">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:orientation="vertical" android:id="@id/top_empty_view" android:layout_width="fill_parent" android:layout_height="0.0dip" />
            <LinearLayout android:orientation="vertical" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/about_page_app_update_margin_horizontal" android:layout_marginRight="@dimen/about_page_app_update_margin_horizontal">
                <TextView android:id="@id/about_cmc_app_name_text_view" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name_short" android:textAlignment="center" style="@style/about_page_app_name_style" />
                <TextView android:id="@id/about_page_version" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_page_app_version_margin_top" android:text="@string/version_name" android:textAlignment="center" style="@style/about_page_version_text_style" />
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ProgressBar android:layout_gravity="center" android:id="@id/about_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_page_app_update_margin_top">
                        <TextView android:id="@id/about_page_available" android:focusable="false" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/your_application_is_up_to_date" android:textAlignment="center" android:layout_marginStart="@dimen/about_page_app_update_margin_horizontal" android:layout_marginEnd="@dimen/about_page_app_update_margin_horizontal" style="@style/about_page_version_text_style" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="100.0">
                            <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/side_layout_weight" />
                            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/about_page_update_button" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_page_app_update_button_margin_top" android:layout_marginBottom="@dimen/about_page_app_update_button_margin_top" android:layout_weight="@integer/middle_layout_weight">
                                <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/about_page_update_button_tv" android:background="@drawable/about_page_update_retry_button_background" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/button_min_height" android:text="@string/update" android:paddingStart="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" android:paddingEnd="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" style="@style/about_page_contained_button_style" />
                            </LinearLayout>
                            <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/side_layout_weight" />
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/about_page_app_update_margin_horizontal" android:layout_marginRight="@dimen/about_page_app_update_margin_horizontal" android:layout_weight="50.0">
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/side_layout_weight" />
                <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_weight="@integer/middle_layout_weight">
                    <TextView android:textColor="?android:textColorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@id/about_page_button_terms_and_conditions_tv" android:background="@drawable/about_page_button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:minHeight="@dimen/button_min_height" android:text="@string/terms_and_conditions" android:paddingStart="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" android:paddingEnd="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" android:focusedByDefault="true" style="@style/about_page_contained_button_style" />
                    <TextView android:textColor="?android:textColorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@id/about_page_button_pp_tv" android:background="@drawable/about_page_button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:minHeight="@dimen/button_min_height" android:text="@string/privacy_policy_in_about_page" android:paddingStart="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" android:paddingEnd="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" style="@style/about_page_contained_button_style" />
                    <TextView android:textColor="?android:textColorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@id/about_page_button_open_source" android:background="@drawable/about_page_button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/button_min_height" android:text="@string/open_source_licences" android:paddingStart="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" android:paddingEnd="@dimen/about_page_tnc_pp_openlicences_button_padding_start_end" style="@style/about_page_contained_button_style" />
                </LinearLayout>
                <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/side_layout_weight" />
            </LinearLayout>
            <View android:orientation="vertical" android:id="@id/bottom_empty_view" android:layout_width="fill_parent" android:layout_height="0.0dip" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>